ADD - Se agrega el modelo para las solicitudes

--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -455,6 +455,53 @@
             </field>
         </record>
 
+<!--SOLICITUD DE CAMBIOS-->
+
+        <record model="ir.actions.act_window" id="cambios_list_action">
+            <field name="name">Solicitudes</field>
+            <field name="res_model">gdc.solicitud.cambios</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form,calendar</field>
+            <field name="help" type="html">
+            </field>
+        </record>
+
+        <record model="ir.ui.view" id="cambios_tree_view">
+            <field name="name">gdc.solicitud.cambios.tree</field>
+            <field name="model">gdc.solicitud.cambios</field>
+            <field name="arch" type="xml">
+                <tree string="Solicitudes">
+                    <field name="project_id" />
+                    <field name="tarea_id" />
+                    <field name="justification" />
+                    <field name="date" />
+                    <field name="user_id" />
+                    <field name="solicitud" />
+                </tree>
+            </field>
+        </record>
+
+        <record model="ir.ui.view" id="cambios_form_view">
+            <field name="name">gdc.solicitud.cambios.form</field>
+            <field name="model">gdc.solicitud.cambios</field>
+            <field name="arch" type="xml">
+                <form string="Solicitudes" version="7.0">
+                    <group>
+                        <group>
+                            <group>
+                                <field name="project_id" />
+                                <field name="tarea_id" />
+                                <field name="justification" />
+                                <field name="date" />
+                                <field name="user_id" />
+                                <field name="solicitud" />
+                            </group>
+                        </group>
+                    </group>
+                </form>
+            </field>
+        </record>
+
 
         <menuitem id="main_gobiernodecalle_menu" name="Gobierno de calle y Direccionalidad" sequence="120"/>
 
@@ -462,6 +509,7 @@
         <menuitem id="asigancion_menu" name="Asignacion" parent="proyectos_menu" action="proyectos_list_action" sequence="1"/>
         <menuitem id="tareas_menu" name="Tareas" parent="proyectos_menu" action="tareas_list_action" sequence="3"/>
         <menuitem id="incidencias_menu" name="Incidencias" parent="proyectos_menu" action="incidencias_list_action" sequence="4"/>
+        <menuitem id="cambios_menu" name="Solicitudes" parent="proyectos_menu" action="cambios_list_action" sequence="5"/>
         
         <menuitem id="configuration_menu" name="Configuration" parent="main_gobiernodecalle_menu" sequence="10"/>
         <menuitem id="fondos_menu" name="Fondos de financiamiento" parent="configuration_menu" action="financiamiento_list_action"/>
