--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -120,10 +120,10 @@
                         </group>
                         <group>
                              <field name="actividad" string="Actividad"/>
-                             <field name="area_atencion"/>
+                             <field name="area_atencion" widget="selection"/>
                              <field name="cobertura"/>
                              <field name="priority"/>
-                             <field name="tipo_financiamiento"/>
+                             <field name="tipo_financiamiento" widget="selection"/>
                              <field name="verificar_soporte" />
                              <field name="tipo_documento" attrs="{'invisible':[('verificar_soporte', '!=', True)]}"/>
                              <field name="adjunto_gaceta_pdf" string="Adjuntar soporte digital (.pdf)" filename="adjunto_gaceta_name_pdf" attrs="{'invisible':[('tipo_documento', '!=', 'PDF')]}"/>
